# llmfit-pypi

./: .gitignore  LICENSE  README.md  build_wheels.py  hatch_build.py  justfile  pyproject.toml
.github/workflows/: build_and_publish.yml  check_upstream.yml
src/llmfit/: __init__.py  __main__.py
tests/: test_llmfit.py
