[project]
name = "llmfit"
dynamic = ["version", "license"]
description = "Unofficial PyPI distribution of llmfit – the LLM model management CLI"
authors = [
    { name = "James Hoctor", email = "JEHoctor@protonmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["llm", "cli", "machine-learning", "model-management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/AlexsJones/llmfit"
"Bug Tracker" = "https://github.com/AlexsJones/llmfit/issues"
"Packaging Source" = "https://github.com/JEHoctor/llmfit-pypi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/llmfit"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[dependency-groups]
dev = [
    "hatchling",
    "ipython>=8.12.3",
    "pytest>=8",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "E501",   # Handled by ruff format (line-too-long)
    "D100",   # undocumented-public-module
    "D104",   # undocumented-public-package
    "D203",   # Conflicts with D211
    "D212",   # Conflicts with D213 (code uses second-line summary style)
    "S603",   # Gave too many false positives with safe uses of subprocess.run
    "COM812", # This rule is redundant when using the formatter, which enforces trailing commas
    "TD002",  # Don't need author info on todo items
    "TD003",  # Don't need issues links on todo items
]

[tool.ruff.lint.per-file-ignores]
"{hatch_build.py,build_wheels.py}" = [
    "T201",   # print() is intentional in build hooks and scripts
    "S310",   # Gave too many false positives with safe uses of urllib.request.urlopen
    "TRY003", # Inline exception messages are fine in a build utility
    "EM102",  # f-string exception messages are fine in a build utility
]
"tests/*" = [
    "S101",    # Assert statements are allowed in tests.
    "INP001",  # No __init__.py needed in tests/.
    "PLR2004", # Magic values are fine in tests.
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.environment]
python-version = "3.8"
